contrast issues

--- a/style.css
+++ b/style.css
@@ -804,7 +804,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #C8490E;
 }
 
 .tc-white {
@@ -815,7 +815,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #C8490E;
     color: #FFFFFF!important;
 }
 
@@ -833,7 +833,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #C8490E!important;
 }
 
 .ltc-atomic-tangerine:hover {
